[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-query = { path = "../..", features = ["devtools"] }
reqwasm = "0.4.0"
serde = { version = "1.0", features = ["derive"] }